Adjust vertical alignment of callouts to avoid spacing issues.

--- a/src/main/resources/common/css/positioning-openstack.css
+++ b/src/main/resources/common/css/positioning-openstack.css
@@ -453,3 +453,7 @@ div.sidebar{
     border: 1px solid black;
     padding: 10px 10px 10px 10px;
 }
+
+.co img {
+vertical-align: middle;
+}
