--- a/src/main/resources/common/css/positioning-rackspace.css
+++ b/src/main/resources/common/css/positioning-rackspace.css
@@ -464,3 +464,7 @@ div.sidebar{
     border: 1px solid black;
     padding: 10px 10px 10px 10px;
 }
+
+.co img {
+vertical-align: middle;
+}
